testando alguns comandos